--- a/app/views/dashboard/merge_requests.html.haml
+++ b/app/views/dashboard/merge_requests.html.haml
@@ -5,7 +5,7 @@
 
 %hr
 .row
-  .span3
+  .span3(style="border-right:1px solid #ddd;margin-right:-1px;")
     = render 'filter', entity: 'merge_request'
   .span9
     = render 'shared/merge_requests'
