--- a/app/views/dashboard/projects.html.haml
+++ b/app/views/dashboard/projects.html.haml
@@ -11,7 +11,7 @@
 
 %hr
 .row
-  .span3
+  .span3(style="border-right:1px solid #ddd;margin-right:-1px;")
     %ul.nav.nav-pills.nav-stacked
       = nav_tab :scope, nil do
         = link_to "All", projects_dashboard_path
