--- a/app/views/groups/_filter.html.haml
+++ b/app/views/groups/_filter.html.haml
@@ -10,12 +10,15 @@
       %li{class: ("active" if !params[:status])}
         = link_to group_filter_path(entity, status: nil) do
           Open
+          %span.count= Issue.opened.count
       %li{class: ("active" if params[:status] == 'closed')}
         = link_to group_filter_path(entity, status: 'closed') do
           Closed
+          %span.count= Issue.with_state(:closed).count
       %li{class: ("active" if params[:status] == 'all')}
         = link_to group_filter_path(entity, status: 'all') do
           All
+          %span.count= Issue.count
 
   %fieldset
     %legend Projects:
@@ -25,11 +28,11 @@
           %li{class: ("active" if params[:project_id] == project.id.to_s)}
             = link_to group_filter_path(entity, project_id: project.id) do
               = project.name_with_namespace
-              %small.pull-right= entities_per_project(project, entity)
+              %span.count= entities_per_project(project, entity)
       - if @projects.blank?
         %p.nothing_here_message This group has no projects yet
 
-  %fieldset
+  %fieldset(style="margin-right:10px;")
     %hr
     = link_to "Reset", group_filter_path(entity), class: 'btn pull-right'
 
