--- a/app/views/merge_requests/_filter.html.haml
+++ b/app/views/merge_requests/_filter.html.haml
@@ -4,17 +4,21 @@
       %li{class: ("active" if (params[:f] == 'open' || !params[:f]))}
         = link_to project_merge_requests_path(@project, f: 'open', milestone_id: params[:milestone_id]) do
           Open
+          %span.count= @project.merge_requests.opened.count
       %li{class: ("active" if params[:f] == "closed")}
         = link_to project_merge_requests_path(@project, f: "closed", milestone_id: params[:milestone_id]) do
           Closed
+          %span.count= @project.merge_requests.closed.count
       %li{class: ("active" if params[:f] == 'assigned-to-me')}
         = link_to project_merge_requests_path(@project, f: 'assigned-to-me', milestone_id: params[:milestone_id]) do
           Assigned To Me
+          %span.count= @project.merge_requests.opened.assigned(current_user).count
       %li{class: ("active" if params[:f] == 'all')}
         = link_to project_merge_requests_path(@project, f: 'all', milestone_id: params[:milestone_id]) do
           All
+          %span.count= @project.merge_requests.count
 
-  %fieldset
+  %fieldset(style="margin-right:10px;")
     %hr
     = link_to "Reset", project_merge_requests_path(@project), class: 'btn pull-right'
 
